--- a/data/nlu/general.yml
+++ b/data/nlu/general.yml
@@ -195,4 +195,9 @@ nlu:
     - [杭州](location)
     - 1
     - 1000
-    - 鑫利达
+    - [鑫利达](product)
+    - [2022年二十六期个人大额存单](product)
+    - [华安安康A](product)
+    - [日鑫系列天天盈B款](product)
+    - [国家开发银行2022年第二期金融债券](product)
+    - [利安永吉终身寿险](product)
