增加语义相似度等一大堆打包push2

--- a/data/nlu/faq.yml
+++ b/data/nlu/faq.yml
@@ -60,3 +60,15 @@ nlu:
     - 这款产品请帮我买[2万](amount-of-money)块钱
     - 好的下单吧
     - 可以的直接买吧
+- intent: appoint_which_one
+  examples: |
+    - 第一个
+    - 第1个
+    - 第二个
+    - 第2个
+    - 列表里第三个
+    - 最后一个
+    - 第3个
+    - 倒数第一个
+    - 倒数第1个
+    - 第四个
